--- a/VTableView/VTableView/VTableView.csproj
+++ b/VTableView/VTableView/VTableView.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.xib" />
+    <InterfaceDefinition Include="ViewController.xib" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -79,6 +80,12 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <Compile Include="ViewController.cs">
+      <DependentUpon>ViewController.xib</DependentUpon>
+    </Compile>
+    <Compile Include="ViewController.designer.cs">
+      <DependentUpon>ViewController.xib</DependentUpon>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
