--- a/VTableView/VTableView/VTableView.csproj
+++ b/VTableView/VTableView/VTableView.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.xib" />
     <InterfaceDefinition Include="ViewController.xib" />
+    <InterfaceDefinition Include="Cell.xib" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -85,6 +86,13 @@
     </Compile>
     <Compile Include="ViewController.designer.cs">
       <DependentUpon>ViewController.xib</DependentUpon>
+    </Compile>
+    <Compile Include="TableSource.cs" />
+    <Compile Include="Cell.cs">
+      <DependentUpon>Cell.xib</DependentUpon>
+    </Compile>
+    <Compile Include="Cell.designer.cs">
+      <DependentUpon>Cell.xib</DependentUpon>
     </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
